# Computational-Mathematics

./: Crank_Nicholson.ipynb  Nonlin_Heat.ipynb  README.md  Upwind_Lax_Vend.ipynb
Backward_Diff_Formulas/: BDF_order&J_2.ipynb  CMakeLists.txt
Backward_Diff_Formulas/src/: BDF.hpp
Backward_Diff_Formulas/tests/: orbit_J2_test.cpp  order_test.cpp  test.cpp
Cubic_Spline/: Spline.ipynb  spline.cpp
Ermit_Interpolator/Ermit_Interpolator/: Ermit_Interpolator.cpp
Gauss_Quadrature/: Gauss.cpp  Gauss.ipynb
Godunov_method/: Godunov.ipynb
Hermit_Interpolator/: CMakeLists.txt  Hermit.ipynb  Hermit_Interpolator.cpp
Hermit_Interpolator/src/: Hermit.cpp  Hermit.hpp
Hermit_Interpolator/tests/: error_research.cpp
Num_Diff/: Num_Diff.cpp  Num_Diff.ipynb
Ode_Int/: Arenstorff orbit.ipynb  CMakeLists.txt
Ode_Int/src/: odeint.hpp
Ode_Int/tests/: orbit_arenstorf_test.cpp  oscilator_test.cpp  test.cpp
compDiff/: numDiff.cpp
